* Moneris US: Add CVV and AVS [AntoineInsa]
* Stripe: Add support for statement_description [markabe]
* CASHNet: Add support for fname and lname [markabe]
* Orbital: Fix customer profile auth/purchase [denis]
* Payex: Fix expiry month to allow 4 digit year [duff]
* Cashnet: Allow overriding custcode [hoenth]
* Cashnet: Fix overridding item_code per transaction [ntalbott]

== Version 1.44.1 (Aug 28, 2014)

* Allow SSLv3 for PsiGate [mutemule]
* Set default :state to n/a for NetworkMerchants [cjoudrey]

== Version 1.44.0 (Aug 21, 2014)

* Moneris: Add :avs_enabled option [bslobodin]
* Stripe: Populate authorization in failed responses, when available [bslobodin]
* Moneris: Use the name on the card [duff]
* Balanced: More 1.1 API fixes and mappings [ntalbott]
* Balanced: Handle "pending" refunds [duff]
* Immediately convert credit card date fields to integers [ntalbott]
* Balanced: Handle outside card tokens [ntalbott]
* Balanced: Do not pass address if zip is missing [ntalbott]
* Float active_utils at the patch version instead of the minor version [nwjsmith]
* Wirecard: Fix CVV & AVS response handling [alevett]
* Consolidate deprecation handling [ntalbott]
* Authorize.Net CIM: Do not send x_test_request [danrabinowitz]
* Authorize.Net CIM: Pass delimiter through [jsoma]
* HPS: Add support for track data [SecureSubmit]
* HPS: Fix processing without an address [SecureSubmit]
* Balanced: Do not pass address if zip is blank [duff]
* Do CreditCard attribute cleanup at assignment [ntalbott]
* eWay Rapid: Add auth/capture/void support [ntalbott]
* [POSSIBLE BREAKAGE] Remove dependency on active_utils Validateable [ntalbott]
* Make all active_utils requires explicit [ntalbott]
* Balanced: Handle legacy card tokens [ntalbott]
* Braintree Blue: Default verification merchant id [speric]
* [POSSIBLE BREAKAGE] Extract integrations into an offsite_payments gem [ntalbott]
* [POSSIBLE BREAKAGE] Drop stated/tested compatibility with Rails < 3.2 [ntalbott]