@@ -11,6 +11,8 @@
 * Payex: Fix expiry month to allow 4 digit year [duff]
 * Cashnet: Allow overriding custcode [hoenth]
 * Cashnet: Fix overridding item_code per transaction [ntalbott]
+* Authorize.Net: Fix amount formatting [ntalbott]
+* Authorize.Net: Truncate order_id to 20 characters [ntalbott]
 
 == Version 1.44.1 (Aug 28, 2014)
 
